--- a/appointment_admin/.gitignore
+++ b/appointment_admin/.gitignore
@@ -15,8 +15,8 @@
 .DS_Store
 .env.local
 .env.development.local
-.env.test.local
-.env.production.local
+.en.env.production.localv.test.local
+
 
 npm-debug.log*
 yarn-debug.log*
